css/rov-inputs.css
/* CONTROLES TÁCTILES / ON-SCREEN */
#controls-container {
    position: absolute;
    bottom: 60px;
    left: 20px;
    right: 20px;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    pointer-events: none;
    transition: all 0.5s ease;
}

/* Side Grids */
.control-grid {
    display: grid;
    gap: 12px 10px;
    pointer-events: auto;
    align-items: end;
}

.right-side-grid {
    grid-template-columns: repeat(4, 1fr);
}

.grid-header-explore {
    grid-column: 1 / span 3;
    font-weight: bold;
    font-family: var(--font-main);
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 45px;
}

/* Interaction States */
#btn-scan.scan-active {
    background-color: #fff !important;
    color: #000 !important;
}

@media (orientation: landscape) {
    #controls-container {
        bottom: 25px;
        left: 40px;
        right: 40px;
    }
}

